--- a/problem-b/css/style.css
+++ b/problem-b/css/style.css
@@ -1,37 +1,32 @@
 circle {
-  fill: #5f5f5f;
+  color: #5f5f5f;
 }
 path {
   stroke: #5f5f5f;
   stroke-width: 8px;
 }
-circle.small {
-  color: white;
+.small {
+  fill: white;
 }
-.small.contained{
-  color: #573d29;
+.contained .small {
+  fill: #573d29;
 }
-circle.contained {
-  color: #c0c0c0;
+.contained #rect, circle {
+  fill: #c0c0c0;
   stroke: none;
-  opacity: 1;
-}
-rect#rect, .contained {
-  color: #c0c0c0;
-  stroke: none;
-  opacity: 1;
+  opacity: 1
 }
 #interactive {
-  color: #c0c0c0;
+  fill: #c0c0c0;
   stroke: #bd250d;
-  width: 4px;
+  stroke-width: 4px;
 }
-#interactive: hover{
+#interactive:hover {
   fill: #bd250d;
 }
 rect {
   opacity: 0;
 }
-d: inactive{
+path:nth-of-type(4) {
   stroke: none;
 }
