--- a/problem-d/css/style.css
+++ b/problem-d/css/style.css
@@ -28,14 +28,17 @@ li {
   display: inline;
   margin-right: 1rem;
 }
+ul {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  padding-top: .5rem;
+}
 input {
   height: 2.5rem;
   font-size: 1rem;
   padding: .5rem;
   vertical-align: bottom;
-}
-img {
-  position: left;
 }
 button {
   height: 2.5rem;
@@ -50,6 +53,15 @@ button {
   text-decoration: none;
   padding: 0.75rem;
 }
-.logo::after {
+.logo {
   background-image: url('../img/ischool-symbol-white.png');
+  background-repeat: no-repeat;
+  text-align: left;
+}
+a:active {
+  color: #b7a57a;
+  border-bottom-color: #b7a57a;
+  border-bottom-width: .6rem;
+  border-left: .8rem;
+  border-right: .8rem;
 }
