--- a/problem-d/css/style.css
+++ b/problem-d/css/style.css
@@ -4,12 +4,12 @@
 h1, h2 {
   color: #4b2e83;
   font-weight: 900;
-  font-family: 'Encode Sans';
+  font-family: 'Encode Sans', sans-serif;
 }
 body {
   color: #535353;
   margin: 8px;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif;
 }
 nav {
   width: 100%;
@@ -56,12 +56,16 @@ button {
 .logo {
   background-image: url('../img/ischool-symbol-white.png');
   background-repeat: no-repeat;
-  text-align: left;
+  background-position: left;
+  padding-left: 1em;
+  padding-right: 1em;
+  background-size: contain;
 }
-a:active {
+.nav-link:active, .nav-link:focus, .nav-link:hover {
   color: #b7a57a;
   border-bottom-color: #b7a57a;
   border-bottom-width: .6rem;
+  border-bottom-style: solid;
   border-left: .8rem;
   border-right: .8rem;
 }
